--- a/themes/hugo-theme-stack/i18n/en.yaml
+++ b/themes/hugo-theme-stack/i18n/en.yaml
@@ -92,4 +92,4 @@ taxoMisc:
     executeBtnTitle:
       other: Execute search
     placeholder:
-      other: Type your tag...
+      other: Type your search...
