--- a/themes/hugo-theme-stack/i18n/fr.yaml
+++ b/themes/hugo-theme-stack/i18n/fr.yaml
@@ -90,7 +90,7 @@ taxoMisc:
     executeBtnTitle:
       other: Lancer la recherche
     placeholder:
-      other: Saisissez votre mot clé...
+      other: Saisissez votre recherche...
 
 clouds:
   open:
